[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aethr"
version = "0.1.11"
description = "A lightweight CLI for explicit, reproducible AI coding workflows."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Archana Pradeep" }
]
keywords = ["ai", "cli", "coding", "workflow", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "litellm>=1.60.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
aethr = "aethr.cli:app"

[project.urls]
Homepage = "https://github.com/archthegit/Aethr"
Repository = "https://github.com/archthegit/Aethr"
Issues = "https://github.com/archthegit/Aethr/issues"

[tool.hatch.build.targets.wheel]
packages = ["aethr"]
artifacts = [
  "aethr/workflows/*.yaml",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.aethr.yaml",
  "/.venv",
  "/dist",
]
